# Trurism_Backend

./: .dockerignore  .env.example  .gitignore  CODEBASE_ANALYSIS.md  CODEBASE_ANALYSIS_DETAILED.md  DATABASE_SETUP_EXPLAINED.md  DEPLOYMENT_FIX_GUIDE.md  DEPLOY_NOW_CHECKLIST.md  Dockerfile  ENV_FIX_EXPLANATION.md  ENV_SETUP_QUICK.md  IMPLEMENTATION_PHASE1.md  IMPLEMENTATION_STATUS_ANALYSIS.md  PAYMENT_INTEGRATION_GUIDE.md  QUICK_STATUS_SUMMARY.md  README.md  RENDER_DEPLOYMENT.md  SETUP_GUIDE.md  alembic.ini  azure-deploy.ps1  azure-deploy.sh  check_openapi.py  database_setup.sql  diagrams.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  requirements_frozen.txt  run.ps1  setup_check.py  start.sh  startup_azure.sh  test_db_connection.py  test_email.py  tmp_init_db.py
.agent/rules/: ci-review-workflow.md  deployment-review-discipline.md  performance-and-scaling-guardrails.md  travel-platform-architecture-guardrails.md  travel-project-rules.md
.azure/: config
.github/: pull_request_template.md
.github/workflows/: dependency-submission.yml  deploy.yml  master_trurism-api.yml
app/: celery.py  main.py
app/activities/: __init__.py  api.py  models.py  schemas.py  services.py
app/admin/: __init__.py  api.py  schemas.py  services.py
app/api_keys/: __init__.py  api.py  models.py  schemas.py  services.py
app/auth/: __init__.py  api.py  models.py  schemas.py  services.py
app/booking/: __init__.py  api.py  bus_service.py  flight_service.py  models.py  payment_processor.py  schemas.py  services.py  tasks.py
app/cms/: __init__.py  api.py  models.py  schemas.py  services.py
app/company/: __init__.py  api.py  models.py  schemas.py  services.py
app/core/: __init__.py  config.py  database.py  mixins.py  redis.py  security.py  supabase.py  tax.py
app/dashboard/: __init__.py  api.py  models.py  schemas.py  services.py
app/feedback/: __init__.py  api.py  models.py  schemas.py  services.py
app/files/: __init__.py  api.py  schemas.py
app/holidays/: __init__.py  api.py  models.py  schemas.py  services.py
app/hotels/: __init__.py  api.py  models.py  schemas.py  services.py
app/markup/: __init__.py  api.py  models.py  schemas.py  services.py
app/newsletter/: api.py  models.py  schemas.py  services.py
app/payments/: __init__.py  api.py  models.py  schemas.py  services.py
app/pricing/: __init__.py  api.py  models.py  schemas.py  services.py
app/search/: __init__.py  airiq_client.py  api.py  api_clients.py  schemas.py  services.py  xml_agency_client.py
app/services/: __init__.py  email.py  pdf.py  storage.py
app/settings/: __init__.py  api.py  models.py  schemas.py  services.py
app/superadmin/: __init__.py  api.py
app/tenant/: __init__.py  api.py  middleware.py  models.py  schemas.py  services.py
app/transfers/: __init__.py  api.py  models.py  schemas.py  services.py
app/visa/: __init__.py  api.py  models.py  schemas.py  services.py
app/wallet/: __init__.py  api.py  models.py  schemas.py  services.py
docs/: API_REFERENCE.md  CHANGELOG.md  ENVIRONMENT_VARIABLES.md  IMPLEMENTATION_SUMMARY.md  PAYMENT_SYSTEM_SETUP.md  PRODUCTION_SETUP.md  README.md  SUMMARY.md  frontend_api_guide.md.resolved
docs/api/: API_KEY_GUIDE.md  README.md
docs/architecture/: README.md
migrations/: env.py
scripts/: promote_superadmin.py  seed.py
test_endpoint/: conftest.py  guide.ms  test_auth.py  test_booking_schema.py  test_booking_service.py  test_email_service.py  test_flight_booking_cache.py  test_forgot_reset_password.py  test_payment.py  test_rbac.py  test_token_lifecycle.py  test_webhook_idempotency.py
tests/: conftest.py  test_auth_roles.py  test_booking.py  test_forgot_reset_pass.py  test_schemas.py  test_tenant_scoping.py  test_webhook_idempotency.py
(+33 files in other folders)
